--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "api/sync.js", "use": "@vercel/node" },
-    { "src": "pages/index.js", "use": "@vercel/next" }
+    { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/.*", "dest": "index.js" }
   ]
 }
